--- a/.editorconfig
+++ b/.editorconfig
@@ -2,13 +2,13 @@ root = true
 
 [*]
 indent_size = 4
-indent_style = spaces
+indent_style = space
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.go]
+[**.go]
 indent_style = tab
 
 [file-extensions.txt]
